--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -40,7 +40,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-fig-caption-color          : mix(#fff,  #{$dark-gray}, 25%);
     --global-link-color                 : #{$primary-color}; 
     
-    --global-link-color-hover           : mix(#000, #{$primary-color}, 20%); 
+    --global-link-color-hover           : #fbc02d; 
     --global-link-color-visited         : mix(#fff, #{$primary-color}, 20%);  
     
     --global-masthead-link-color        : #{$dark-gray};
