Fix primary color code syntax in default light theme

--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -2,7 +2,7 @@
     DEFAULT THEME - LIGHT VERSION
     ========================================================================== */
 /* Color codes used for the theme */
-$primary-color              : ##52c8c8;
+$primary-color              : #52c8c8;
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
