--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -27,7 +27,7 @@ $sidebar-link-max-width     : 250px;
 $sidebar-screen-min-width   : 1024px;
 
 a:hover {
-  color: #ffee58 !important;
+  color: #fdd835 !important;
   transition: color 0.3s ease-in-out !important; 
   text-decoration: none !important;
 }
