--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -32,6 +32,22 @@ a:hover {
   text-decoration: none !important;
 }
 
+.archive__item-buttons a:hover {
+  
+  /* 1. Force Text to stay White (instead of turning yellow) */
+  color: #fff !important; 
+  
+  /* 2. Change the Background Color */
+  /* You can set this to your Yellow (#fdd835) or a Darker Teal (#26a69a) */
+  background-color: #fdd835 !important; 
+  
+  /* 3. Change the Border to match */
+  border-color: #fdd835 !important; 
+  
+  /* Optional: Remove underline just in case */
+  text-decoration: none !important;
+}
+
 /* Default light theme for the site */
 :root {
     --global-base-color                 : #{$primary-color};
