Change background and text colors in light theme

--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -59,10 +59,9 @@ a:hover {
 
   transition: color 0.3s ease-in-out !important; 
   
-  background-color: #fdd835 !important; 
-  border-color: #fdd835 !important;
+  background-color: #fff !important; 
   
-  color: #fff !important; 
+  color: #fdd835 !important; 
 }
 
 /* Default light theme for the site */
