--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -30,7 +30,7 @@
           {% if post.venueurl %}
             <a href="{{ post.venueurl }}" style="color: #4db6ac; text-decoration: none;">{{ post.venue }}</a>
           {% else %}
-            <span style="color: #4db6ac;">{{ post.venue }}</span>
+            <span style="color: #000;">{{ post.venue }}</span>
           {% endif %}
           {% if post.date %}
              ({{ post.date | default: "1900-01-01" | date: "%Y" }})
