Display courses for each archive post
Add courses display to archive single post

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -37,6 +37,11 @@
           {% endif %}
         </i>
       {% endif %}
+
+      {% if post.courses %}
+        <br>
+        <strong>Courses: </strong> {{ post.courses }}
+      {% endif %}
     </p>
 
     <div class="archive__item-buttons">
