--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,6 +1,6 @@
 {% include base_path %}
 
-{% if post.header. teaser %}
+{% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
   {% assign teaser = site.teaser %}
@@ -16,10 +16,12 @@
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     
     <h2 class="archive__item-title" itemprop="headline" style="color: #4db6ac; margin-bottom: 5px;">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a>
+      {% if post. paperurl %}
+        <a href="{{ post.paperurl }}" style="color: #4db6ac;">{{ title }}</a>
+      {% elsif post.link %}
+        <a href="{{ post.link }}" style="color: #4db6ac;">{{ title }}</a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink" style="color: #4db6ac;">{{ title }}</a>
       {% endif %}
     </h2>
     
@@ -32,12 +34,12 @@
         <br>
         <i>
           {% if post.venueurl %}
-            <a href="{{ post.venueurl }}" style="color: #000; text-decoration: none;">{{ post.venue }}</a>
+            <a href="{{ post.venueurl }}" style="color: #000; text-decoration: none;">{{ post. venue }}</a>
           {% else %}
             <span style="color: #000;">{{ post.venue }}</span>
           {% endif %}
           {% if post.date %}
-             ({{ post.date | default: "1900-01-01" | date: "%Y" }})
+             ({{ post.date | default: "1900-01-01" | date:  "%Y" }})
           {% endif %}
         </i>
       {% endif %}
@@ -50,7 +52,7 @@
 
     <div class="archive__item-buttons">
       {% if post.paperurl %}
-        <a href="{{ post.paperurl }}" class="btn btn--info" style="color: #fff; background-color:  #4db6ac; border-color: #4db6ac;">Paper</a>
+        <a href="{{ post.paperurl }}" class="btn btn--info" style="color: #fff; background-color: #4db6ac; border-color: #4db6ac;">Paper</a>
       {% endif %}
       
       {% if post.arxivurl %}
