--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,4 +14,18 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    // Get all links
+    var links = document.links;
+    for (var i = 0, linksLength = links.length; i < linksLength; i++) {
+      // Check if the link is external
+      if (links[i].hostname !== window.location.hostname) {
+        links[i].target = '_blank';
+        links[i].rel = 'noopener noreferrer';
+      }
+    }
+  });
+</script>
+
 <!-- end custom head snippets -->
